<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--App values-->
    <string name="app_name" translatable="false">Repositories Observer</string>

    <!--App titles-->
    <string name="activity_settings_title">Application settings</string>
    <string name="activity_main_title">Repositories search</string>
    <string name="fragment_repo_tags_title">Repository\'s tags</string>
    <string name="fragment_repo_issues_title">Repository\'s issues</string>

    <!--RepoListActivity two pane-->
    <string name="repo_detail_container_empty_message">Detailed information about the repository</string>

    <!--Menu actions labels-->
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="action_sync_now">Sync now</string>

    <!--RepoListFragment-->
    <string name="update_prefix">Updated: %1$s</string>
    <string name="list_view_empty_message">Enter a keyword to search for suitable repositories</string>

    <!--RepoDetailFragment-->
    <string name="repo_language_title">Language</string>
    <string name="repo_stargazer_title">Stargazer</string>
    <string name="repo_name_title">Name</string>
    <string name="repo_details_title">Repository\'s details</string>
    <string name="repo_full_name_title">Full name</string>
    <string name="repo_description_title">Description</string>
    <string name="repo_created_at_title">Created at</string>
    <string name="repo_updated_at_title">Updated at</string>
    <string name="repo_login_title">Login</string>
    <string name="repo_avatar_url_title">Avatar URL</string>
    <string name="repo_type_title">Type</string>
    <string name="repo_tags_title">Tags</string>

    <!--EditText hints-->
    <string name="enter_tags">Enter new tags separated by a space</string>
    <string name="enter_new_tag_name">Enter new tag name</string>
    <string name="enter_issue_title">Enter title</string>
    <string name="enter_issue_description">Enter description</string>
    <string name="enter_email_address">Email address</string>
    <string name="enter_password">Password</string>

    <!--Button's values-->
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <!--Activity settings-->
    <string name="pref_service_setting_category_title">Checking service settings</string>
    <string name="pref_repo_name">Set repository name</string>
    <string name="pref_repo_name_summary">Set tracked repository name</string>
    <string name="pref_repo_name_default" translatable="false">Task15_Activity</string>
    <string name="pref_repo_owner_login">Set repository owner login</string>
    <string name="pref_repo_owner_login_summary">Set tracked repository owner login</string>
    <string name="pref_repo_owner_login_default" translatable="false">JohnKuper</string>
    <string name="pref_check_frequency">Choose check frequency</string>
    <string name="pref_check_frequency_summary">Choose check frequency in minutes</string>
    <string name="pref_check_frequency_default" translatable="false">0</string>
    <string name="pref_only_by_tag">Only by tag</string>
    <string name="pref_only_by_tag_summary">Search repositories only by tag</string>
    <string name="check_frequency_one_minute">1 minute</string>
    <string name="check_frequency_five_minutes">5 minutes</string>
    <string name="check_frequency_ten_minutes">10 minutes</string>
    <string name="check_frequency_never">Never</string>
    <string name="check_frequency_summary_in_minutes">%1$s minute(s)</string>

    <!-- Activity login-->
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_cancel">Cancel</string>

    <!--Toast messages-->
    <string name="toast_search_complete_without_results">"Search is complete. There are no results to display"</string>
    <string name="toast_empty_required_fields">"All fields must be filled"</string>
    <string name="toast_more_than_one_repository_found_by_check_service">"More than one repository was found. Specify the search criteria more detailed."</string>
    <string name="toast_internet_connection_is_not_available_service_disabled">Internet connection is not available. Repositories tracking is disabled.</string>
    <string name="toast_only_unique_tags">The repository can only have unique tags</string>
    <string name="toast_only_unique_issues">Issue with title {%1$s} and body {%2$s} already exist</string>
    <string name="wrong_username_or_password">Wrong username or password</string>
    <string name="please_log_in_first">Please log in first</string>

    <!--Repositories check service-->
    <string name="service_repository_was_changed">Repository with name %1$s was changed!</string>
    <string name="service_stargazer_count_changed">Stargazer count changed from %1$d to %2$d.</string>
    <string name="service_notification_content_title">Info</string>
    <string name="service_notification_ticker">Repository changed!</string>

    <!--OAuth-->
    <string name="account_label">RepoObserver</string>
    <string name="signup_title">Create new account</string>
    <string name="login_label">Log in</string>
    <string name="add_new_issue">Add new issue</string>

    <!-- Dialog fragments-->
    <string name="dialog_fragment_create_issue_title">Create new Issue</string>
    <string name="dialog_fragment_tag_rename_title">Edit tag</string>



</resources>
